--- a/index.html
+++ b/index.html
@@ -54,6 +54,31 @@
   <section id="lojas">
     <h2>Lojas em destaque</h2>
     <div id="lista-lojas" class="grid-lojas"></div>
+    <div id="lista-lojas" class="grid-lojas"></div>
+
+    <div id="lista-lojas" class="grid-lojas">
+
+  <a href="loja.html" class="card-lojas">
+    <img src="loja.png" alt="Loja Roupas">
+    <h3>Fashion Street</h3>
+    <p>Roupas e acessórios</p>
+  </a>
+
+  <a href="loja.html" class="card-lojas">
+    <img src="loja.png" alt="Loja Eletrônicos">
+    <h3>Tech World</h3>
+    <p>Eletrônicos e gadgets</p>
+  </a>
+
+  <a href="loja.html" class="card-lojas">
+    <img src="loja.png" alt="Loja Alimentação">
+    <h3>Delícias do Bairro</h3>
+    <p>Alimentação e lanches</p>
+  </a>
+
+</div>
+
+
   </section>
 
   <script type="module" src="script.js"></script>
